# ace-proxy

./: .gitignore  AGENTS.MD  Cargo.toml  README.md  plan.md  test_full.ps1  test_proxy.ps1  upgrade.md
.github/workflows/: release.yml
src/: backend.rs  config.rs  error.rs  git_filter.rs  job_object.rs  jsonrpc.rs  main.rs  process_group.rs  proxy.rs  throttle.rs
target2/: .rustc_info.json
target2/release/: mcp-proxy.d
target2/release/.fingerprint/anstream-422be1ea052f67f6/: lib-anstream
target2/release/.fingerprint/anstyle-634426798737d684/: lib-anstyle.json
target2/release/.fingerprint/anstyle-parse-b061ce8bc140812e/: lib-anstyle_parse.json
target2/release/.fingerprint/anstyle-query-ccaa9bc23b16277b/: lib-anstyle_query  lib-anstyle_query.json
target2/release/.fingerprint/anstyle-wincon-7992a73caad85fa4/: lib-anstyle_wincon  lib-anstyle_wincon.json
target2/release/.fingerprint/anyhow-682898bc0cfaca7f/: lib-anyhow.json
target2/release/.fingerprint/anyhow-82de44b0a39bf94d/: build-script-build-script-build  build-script-build-script-build.json
target2/release/.fingerprint/anyhow-c1a81c640b8de0e0/: run-build-script-build-script-build.json
target2/release/.fingerprint/bytes-78897ea352d5b6f4/: lib-bytes
target2/release/.fingerprint/cfg-if-db98bcc5b86e9e92/: lib-cfg_if  lib-cfg_if.json
target2/release/.fingerprint/clap_builder-07f9bd3d883804b7/: lib-clap_builder  lib-clap_builder.json
target2/release/.fingerprint/clap_derive-f16ee5855188ea38/: lib-clap_derive  lib-clap_derive.json
target2/release/.fingerprint/heck-82d5db0dcd0f6c97/: lib-heck  (+1 more)
(+84 files in other folders)
